# packages/backend/src/auth/dto/login.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { IsEmail, IsNotEmpty, IsString, MinLength } from "class-validator";
+
+export class LoginDto {
+  @IsString()
+  @ApiProperty()
+  accessToken: string;
+}
